[package]
name = "stun_client"
version = "0.1.0"
authors = ["yoshd <yoshd.develop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-macros = "2.0.0"
async-std = "1.9.0"
futures = "0.3.14"
pnet = "0.27.2"
rand = "0.8.3"
thiserror = "1.0.24"
