[package]
name = "stun-client"
license = "MIT"
version = "0.1.3"
authors = ["yoshd <yoshd.develop@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "This is a simple async_std based asynchronous STUN client library."
repository = "https://github.com/yoshd/stun-client.git"
documentation = "https://docs.rs/stun-client/"
categories = ["asynchronous", "network-programming"]
keywords = ["stun", "nat", "p2p", "udp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-macros = "2.0.0"
async-std = "1.9.0"
futures = "0.3.14"
pnet = "0.27.2"
rand = "0.8.3"
thiserror = "1.0.24"

[dev-dependencies]
anyhow = "1.0.40"
redis = { version = "0.20.0", features = ["async-std-comp"] }
futures-util = "0.3.14"
